--- a/index.html
+++ b/index.html
@@ -600,10 +600,10 @@
                         <span>Téléphone:</span> +33 6 12 34 56 78
                     </div>
                     <div class="info-item">
-                        <span>Adresse:</span> Paris, France
+                        <span>Adresse:</span> Sfax,Tunisie
                     </div>
                     <div class="info-item">
-                        <span>Expérience:</span> +10 ans
+                        <span>Expérience:</span> +3 ans
                     </div>
                     <div class="info-item">
                         <span>Disponibilité:</span> Disponible
@@ -741,7 +741,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Adresse</h4>
-                            <p>123 Avenue des Finances, 75008 Paris, France</p>
+                            <p>Sfax,Tunsie</p>
                         </div>
                     </div>
                     <div class="contact-item">
