--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Adresse</h4>
-                            <p>Sfax,Tunsie</p>
+                            <p>Sfax,Tunisie</p>
                         </div>
                     </div>
                     <div class="contact-item">
